--- a/src/App.css
+++ b/src/App.css
@@ -8,3 +8,12 @@
   max-width: 600px;
   margin: 30px auto;
 }
+
+.App .box-section {
+  background-color: white;
+  border-radius: 10px;
+}
+
+body {
+  background-color: #f8f2ff;
+}
