updated box styling

--- a/src/Weather.css
+++ b/src/Weather.css
@@ -3,6 +3,7 @@
   text-align: left;
   border: 1px solid #6e6e6e7d;
   color: #585858;
+  background-color: white;
   border-radius: 10px;
   margin: 60px auto 0;
   padding: 16px;
